--- a/.github/workflows/fortify-scanner.yml
+++ b/.github/workflows/fortify-scanner.yml
@@ -9,18 +9,36 @@ jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
-    
-    steps:    
-    - name: Check out source code
-      uses: actions/checkout@v4  
-    - name: Run Fortify on Demand SAST & SCA Scan
-      uses: fortify/github-action@v2
-      with:
-        sast-scan: true
-        debricked-sca-scan: true
-      env:
-        FOD_URL: https://trial.fortify.com
-        FOD_TENANT: ${{secrets.FOD_TENANT}}
-        FOD_USER: ${{secrets.FOD_USER}}
-        FOD_PASSWORD: ${{secrets.FOD_PAT}}
-        FOD_RELEASE: ${{secrets.FOD_RELEASE}}
+    steps:
+      # Check out source code
+      - name: Check Out Source Code
+        uses: actions/checkout@v4
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+        
+      # Java is required to run the various Fortify utilities. Ensuring proper version is installed on the runner.
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      # Perform Fortify on Demand SAST + SCA scan and import SAST results into GitHub code scanning alerts
+      - name: Run FoD SAST Scan
+        uses: fortify/github-action@v1
+        with:
+          sast-scan: true
+          debricked-sca-scan: true
+        env:
+          FOD_URL: https://ams.fortify.com
+          FOD_TENANT: ${{secrets.FOD_TENANT}}
+          FOD_USER: ${{secrets.FOD_USER}}
+          FOD_PASSWORD: ${{secrets.FOD_PAT}}
+          FOD_RELEASE: ${{secrets.FOD_RELEASE}}
+          DO_EXPORT: true
+          DO_SETUP: true
+          SETUP_EXTRA_OPTS: --copy-from "${{ github.repository }}:${{ github.event.repository.default_branch }}"
+          DO_JOB_SUMMARY: true
+          DO_PR_COMMENT: true
+          #DO_POLICY_CHECK: true
