--- a/.github/workflows/fortify-scanner.yml
+++ b/.github/workflows/fortify-scanner.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           java-version: 17
           distribution: 'temurin'
+          
+      - name: Build with Maven
+        run: mvn clean install -DskipTests
 
       # Perform Fortify on Demand SAST + SCA scan and import SAST results into GitHub code scanning alerts
       - name: Run FoD SAST Scan
@@ -35,7 +38,6 @@ jobs:
           FOD_RELEASE: ${{secrets.FOD_RELEASE}}
           DO_EXPORT: true
           DO_SETUP: true
-          SETUP_EXTRA_OPTS: --copy-from "${{ github.repository }}:${{ github.event.repository.default_branch }}"
           DO_JOB_SUMMARY: true
           DO_PR_COMMENT: true
           #DO_POLICY_CHECK: true
