--- a/.github/workflows/fortify-scanner.yml
+++ b/.github/workflows/fortify-scanner.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           java-version: 17
           distribution: 'temurin'
-          
+
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
@@ -35,7 +35,7 @@ jobs:
           FOD_TENANT: ${{secrets.FOD_TENANT}}
           FOD_USER: ${{secrets.FOD_USER}}
           FOD_PASSWORD: ${{secrets.FOD_PAT}}
-          FOD_RELEASE: ${{secrets.FOD_RELEASE}}
+          FOD_RELEASE: 251853
           DO_EXPORT: true
           DO_SETUP: true
           DO_JOB_SUMMARY: true
