--- a/.github/workflows/fortify-scanner.yml
+++ b/.github/workflows/fortify-scanner.yml
@@ -23,6 +23,11 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install -DskipTests
+      - name: Package with ScanCentral
+        run: |
+          curl -L -o scancentral.zip https://github.com/fortify/scancentral/releases/download/v25.4.0/scancentral-client.zip
+          unzip scancentral.zip -d scancentral
+          ./scancentral/bin/scancentral package -o package.zip -mvn -exclude target,test,node_modules
 
       # Perform Fortify on Demand SAST + SCA scan and import SAST results into GitHub code scanning alerts
       - name: Run Fortify on Demand SAST & SCA Scan
